--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite --port 5556",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node monitor.js"
+
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "node-cron": "^4.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
