--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,17 @@
 version: "3.8"
-
+x-default-logging: &logging
+  driver: "json-file"
+  options:
+    max-size: "5m"
+    max-file: "2"
+    tag: "{{.Name}}"
 services:
   frontend:
+    logging: *logging
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "5556:80" 
     container_name: vite_frontend
-    restart: unless-stopped
     env_file: .env
